src/objects/zqu__ZProduct__c.object
<CustomObject>
    <description>The Zuora Product Object.</description>
    <fields>
        <fullName>Is_BPM_Product__c</fullName>
        <formula>CONTAINS(Name, &apos;BPM&apos;)</formula>
        <label>Is BPM Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Consulting_Product__c</fullName>
        <formula>CONTAINS( Name , &quot;Consulting&quot; )</formula>
        <label>Is Consulting Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seg3__c</fullName>
        <label>Seg3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active(Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Allow_Feature_Changes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify if features in the product can be changed when creating QuoteProductFeatures</description>
        <inlineHelpText>If features in the product can be changed when creating QuoteProductFeatures</inlineHelpText>
        <label>Allow Feature Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>This field value will be rolled up from ProductRatePlanChargeTier</description>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>The Product Description.</description>
        <inlineHelpText>The Product Description.</inlineHelpText>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveEndDate__c ) ) &amp;  &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveEndDate__c))  &amp;  &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveEndDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveEndDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The Effective End Date of the Product.</description>
        <inlineHelpText>The Effective End Date of the Product.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveStartDate__c ) ) &amp; &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveStartDate__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveStartDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveStartDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The Effective Start Date of the Product.</description>
        <inlineHelpText>The Effective Start Date of the Product.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ZProducts</relationshipLabel>
        <relationshipName>ZProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SKU__c</fullName>
        <description>The Product SKU.</description>
        <inlineHelpText>The Product SKU.</inlineHelpText>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Product.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Product.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZProduct</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__Description__c</columns>
        <columns>zqu__SKU__c</columns>
        <columns>zqu__EffectiveStartDate__c</columns>
        <columns>zqu__EffectiveEndDate__c</columns>
        <columns>Is_BPM_Product__c</columns>
        <columns>Is_Consulting_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ZProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>